第二次提交index

--- a/index.html
+++ b/index.html
@@ -129,10 +129,11 @@
     <div class="grid_12">
       <h2 class="color2">My Homework</h2>
       <div id="filters" class="button-group">
-        <a href="Troop/troop.html" class="btn is-checked" data-filter="*">Troop</a>
-        <a href="iPad/ipad.html" class="btn" data-filter=".ill">iPad</a>
-        <a href="Dell blue/dell-blue.html" class="btn" data-filter=".photo">Dell blue</a>
-        <a href="Web Application/web.html" class="btn" data-filter=".design">Web Application</a>
+        <a href="Troop/troop.html">Troop</a>
+        <a href="iPad/ipad.html">iPad</a>
+        <a href="Dell blue/dell-blue.html" data-filter=".photo">Dell blue</a>
+        <a href="Web Application/web.html" data-filter=".design">Web Application</a>
+        <a href="Dell pink/dell-pink.html" data-filter=".photo">Dell pink</a>
       </div>
       <div class="el gallery" id="isotope">
         <div class="element design">
