--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
         <a href="Dell blue/dell-blue.html" data-filter=".photo">Dell blue</a>
         <a href="Web Application/web.html" data-filter=".design">Web Application</a>
         <a href="Dell pink/dell-pink.html" data-filter=".photo">Dell pink</a>
+        <a href="texiao/3-15动画.html">动画</a>
+        <a href="texiao/3-16菜单滚动.html">菜单滚动</a>
+        <a href="texiao/3-16轮播图.html">轮播图</a>
+        <a href="texiao/3-17获取鼠标位置.html"></a>
+        <a href="texiao/3-17选项卡.html">选项卡</a>
       </div>
       <div class="el gallery" id="isotope">
         <div class="element design">
